--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             <h4>Hello and welcome to our website</h4>
             <h2>Warung M'Bari Nyanyat</h2>
             <h3>A Family Restaurant.</h3>
+            <p>Operation Hours : Wednesday-Sunday, 2:30pm - 9:00pm</p>
         </div>
     </section>
 </body>
